--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1740,107 +1740,107 @@ stories:
   domain: http://www.observer.com/
   link: https://www.moultrieobserver.com/news/at-each-end-of-pacific-skepticism-over-china-farm-purchases/article_5af8f29c-27fa-11ea-a7ee-9fcd889e478b.html
 images:
-- name: machine-road-machine-road-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-kand-two.jpg
-- name: docks-docks-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purple-pond.jpg
-- name: aws-s3-stories-lincoln-consitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-lincoln-consitution.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
-- name: capital-battle-capitolbattle-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-really-hot.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-marcel-duchamp.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-marcel-duchamp.JPG
-- name: supreme-court-supremecourt-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-feed-people.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-feed-people.jpg
-- name: catacombs-catacombs-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-spagetti-accident.jpg
-- name: stories-beachclouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beachclouds-clean-view.jpg
-- name: abandonedbuildings_ww2_color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_color.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-- name: aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
-- name: old-gas-pumps-oldgaspumps-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-sand-paper.jpg
-- name: braceros-domingo-ulloa-creepy-doll-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-creepy-doll-looking-down.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-cinnamon-rolls.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-alien-goggles.jpg
-- name: old-house-oldhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-constitution.jpg
-- name: oldbarn-oldbarn-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crunch-paper.jpg
-- name: gypsy-wagon-gypsywagon-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-dresden.jpg
-- name: scream-IMG_8313.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8313.jpg
-- name: liberty-back-statue-liberty-back-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-emily-carr.jpg
-- name: eduardo-eduardo-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-rainbow-festival.jpg
-- name: store-on-corner-store-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-pablo-blue.jpg
-- name: oldhousecars-house-old-cars-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dali-three.jpg
+- name: stalin-time-through-berlin-wall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-through-berlin-wall.jpg
+- name: birdhouse-birdhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sunday.jpg
+- name: legal-statue-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
+- name: crow_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
+- name: dragon-desert-desert-dragon-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-plentiful.jpg
+- name: supreme-court-supremecourt-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-yellow-collage.jpg
+- name: scream-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8486.jpg
+- name: rain-princess-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-downtown-building.jpg
+- name: border-fence-border-fence-on-hill-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colored-circuits.jpg
+- name: oldhouse-granaryfield-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-rain.jpg
+- name: amusement-park-amusement-park-2-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smooth-ride.jpg
+- name: ellis-island-ellisisland-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-color.jpg
+- name: old-gas-pumps-oldgaspumps-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purple-storm.jpg
+- name: razorwire-DSC-0080-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-hot-spicy.jpg
+- name: carry-load-carryload-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sunday.jpg
+- name: nazi-invasion-british-black-cab-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-british-black-cab-street.jpg
+- name: bf-skinner-old-piano-paris-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+- name: stalin-time-train-station-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-station-statue.jpg
+- name: school-clouds-church-clouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kand-two.jpg
+- name: liberty-back-statue-liberty-back-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-spagetti-accident.jpg
+- name: stalin-time-supreme-court-columns.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-supreme-court-columns.jpg
+- name: trucksilo-trucksilo-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-clean-view.jpg
+- name: old-door-lock-old-door-lock-2-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-electricity.jpg
+- name: crow-crow-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-pablo-blue.jpg
+- name: cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-graham-sutherland.jpg
+- name: file-00-00-18-35.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35.jpg
+- name: curtain-curtain-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crafty-painting.jpg
+- name: old-house-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-color.jpg
+- name: oldcabin-oldcabin-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-yellow-collage.jpg
+- name: oldcabin-store-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crunch-paper.jpg
+- name: store-on-corner-store-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-umberto-bocc.jpg
 - name: castle-wall-DSC-0067-purp-paper.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
-- name: subway-subway-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dry-skin.jpg
-- name: copper-circuit-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stkump-waterfront.jpg
-- name: ellis-island-ellis-island-room-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
-- name: old-church-oldchurch-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sand-paper.jpg
-- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
-- name: blossombar-hot-spicy-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-50-62.jpg
-- name: power-lines-power-lines-empty-space-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sand-paper.jpg
-- name: containership-containership-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-umberto-bocc.jpg
-- name: yosemite-yosemite-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-blocks.jpg
-- name: abandonedbuildings_cinnamon_rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_cinnamon_rolls.jpg
-- name: statue-of-liberty-front-view-statueofliberty-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-green-zuma.jpg
-- name: sand-hand-sand-hand-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-umberto-bocc.jpg
-- name: berlinwall2-berlinwall-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
-- name: birdhouse-birdhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-yellow-paper.jpg
-- name: bordercrossing-bordercrossing-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dali-two.jpg
-- name: trucksilo-trucksilo-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-granite.jpg
-- name: abandonedbuildings_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_mucha_mult.jpg
-- name: oldhouse-oldhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crabapple.jpg
-- name: yosemite-yosemite-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
-- name: white-house-lawn-white-house-window-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-nazi-poster.jpg
-- name: christianity-christianity-under-construction-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-collage.jpg
-- name: 35201856153_61bc075e4b-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
-- name: statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-- name: dc-statue-dcstatue-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kand-two.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-dresden.jpg
+- name: old-house-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-aqua.jpg
+- name: downtown-los-angeles-downtown-la-colored-circuits.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colored-circuits.JPG
+- name: dc-statue-dcstatue-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-brush.jpg
+- name: stories-downtheline-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtheline-dali-three.jpg
+- name: carry-load-carryload-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-yellow-paper.jpg
+- name: adam-smith-adam-smith-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-clean-view.jpg
+- name: server-cloud-server-racks-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-post-modern.jpg
+- name: stalin-time-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-firetruck-bright-sun.jpg
+- name: razorwire-DSC-0080-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-granite.jpg
+- name: udnie-IMG_6965.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6965.jpg
+- name: rockingchair-rockingchair-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-really-hot.jpg
+- name: supreme-court-supremecourt-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gred-mash.jpg
+- name: power-lines-power-lines-empty-space-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-green-zuma.jpg
+- name: oldbarn-oldbarn-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-marcel-duchamp.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
+- name: docks-docks-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-constitution.jpg
+- name: old-school-house-old-schoolhouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
 ---
 Heres How The Raiders Can Clinch A Playoff Berth On Sunday.&nbsp;Credits Way To Recoup Value.&nbsp;California Jails Use Kinder Approach To Solitary Confinement.&nbsp;Redwood Tree Falls, Kills Hiker In California Park.&nbsp;Titans Need Win Against Texans On Sunday For Playoff Berth.&nbsp;Woman Delivers Packages Mistakenly Left At Her House.&nbsp;What Will It Take To Beat Donald Trump?.&nbsp;Giants Have A Shot To Spoil Philadelphia Eagles' Playoff Bid.&nbsp;
